Research Table UI Update v1.1